fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: cener;
+    text-align: center;
     padding-left: 15px;
     padding-right: 15px;
 }
